@@ -4,7 +4,8 @@ OSP-Core: Changed Admin Webhooks Formatting
 OSP-Core: Added Vanity URL to Public Channel APIv1 Return
 OSP-Core: Refactored OSP-Core Startup Processes
 OSP-Core: Refactored OSP-APIv1 into Namespaces
-OSP-Core: Changed BanList Display Pannel ID from bannedUsers to modDisplay in channeplayer.html
+OSP-Core: Changed BanList Display Panel ID from bannedUsers to modDisplay in channeplayer.html
+OSP-Core: Changed Ban List Display Button ID from banListButton to modDisplayButton and onclick from openBanList() to openModDisplay() in channelplayer.html
 OSP-Core: API Change - Moved /channel/authed/<channelLoc> into /channel/<channelLoc> and added option for optional authenticated view using api-key
 
 0.8.3
